Fix z-index issue

--- a/pricing-component-with-toggle/css/main.scss
+++ b/pricing-component-with-toggle/css/main.scss
@@ -175,6 +175,7 @@ h1 {
     justify-items: center;
     margin-top: -1.5em;
     margin-bottom: -1.5em;
+    z-index: 1;
     .plan__header {
       margin-top: auto;
     }
@@ -187,7 +188,6 @@ h1 {
   }
   .plan:nth-child(3) {
     margin-left: -0.5rem;
-    z-index: -1;
   }
 }
 
